--- a/PixelArtProgram.csproj
+++ b/PixelArtProgram.csproj
@@ -7,9 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Grafic\Eraser.png" />
     <None Remove="Grafic\Fill.png" />
     <None Remove="Grafic\fillAll.png" />
+    <None Remove="Grafic\Line_Icon.png" />
     <None Remove="Grafic\pencil.png" />
+    <None Remove="Grafic\Rect_Icon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,9 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Grafic\Eraser.png" />
     <Resource Include="Grafic\Fill.png" />
     <Resource Include="Grafic\fillAll.png" />
+    <Resource Include="Grafic\Line_Icon.png" />
     <Resource Include="Grafic\pencil.png" />
+    <Resource Include="Grafic\Rect_Icon.png" />
   </ItemGroup>
 
 </Project>
