--- a/PixelArtProgram.csproj
+++ b/PixelArtProgram.csproj
@@ -17,6 +17,7 @@
     <None Remove="Grafic\Eraser.png" />
     <None Remove="Grafic\Fill.png" />
     <None Remove="Grafic\fillAll.png" />
+    <None Remove="Grafic\kula.png" />
     <None Remove="Grafic\Line_Icon.png" />
     <None Remove="Grafic\merge_layer.png" />
     <None Remove="Grafic\Niblack.png" />
@@ -25,6 +26,7 @@
     <None Remove="Grafic\pencil.png" />
     <None Remove="Grafic\Rect_Icon.png" />
     <None Remove="Grafic\remove_layer.png" />
+    <None Remove="Grafic\triangle.png" />
     <None Remove="Grafic\up_layer.png" />
   </ItemGroup>
 
@@ -44,6 +46,7 @@
     <Resource Include="Grafic\Eraser.png" />
     <Resource Include="Grafic\Fill.png" />
     <Resource Include="Grafic\fillAll.png" />
+    <Resource Include="Grafic\kula.png" />
     <Resource Include="Grafic\Line_Icon.png" />
     <Resource Include="Grafic\merge_layer.png" />
     <Resource Include="Grafic\Niblack.png" />
@@ -52,6 +55,7 @@
     <Resource Include="Grafic\pencil.png" />
     <Resource Include="Grafic\Rect_Icon.png" />
     <Resource Include="Grafic\remove_layer.png" />
+    <Resource Include="Grafic\triangle.png" />
     <Resource Include="Grafic\up_layer.png" />
   </ItemGroup>
 
